gitops/overlays/ui20/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: cdcp-ui20.dev-dp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
    - host: cdcp-ui20.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
